<resources>
    <string name="app_name">INSY7311_Prototypes</string>
    <string name="steppingstone">SteppingStone</string>
    <string name="login">Login</string>
    <string name="username">USERNAME</string>
    <string name="email_address">EMAIL ADDRESS</string>
    <string name="password">PASSWORD</string>
    <string name="no_account_register_here">No Account? Register Here!</string>
    <string name="create_new_account">Create New Account</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="sign_up">Sign Up</string>
    <string name="please_complete_all_fields">* Please complete all fields</string>
    <string name="personalization_questions">Personalization Questions</string>
    <string name="question_1_of_10">QUESTION 1 OF 10</string>
    <string name="_1_what_main_goals_do_you_wish_to_reach">1. What main goals do you wish to reach?</string>
    <string name="improve_sleeping_patterns">Improve Sleeping Patterns</string>
    <string name="improve_productivity">Improve Productivity</string>
    <string name="manage_anxiety">Manage Anxiety</string>
    <string name="reduce_stress">Reduce Stress</string>
    <string name="boost_productivity">Boost Productivity</string>
    <string name="other">Other</string>
    <string name="cont">Continue</string>
    <string name="welcome">Welcome!</string>
    <string name="i_am_worthy_of_receiving_good_things_and_of_accomplishing_my_goals_in_life">I am worthy of receiving good things and of accomplishing my goals in life</string>
    <string name="my_goals">My Goals</string>
    <string name="exercise_for_1_hour">Exercise for 1 hour</string>
    <string name="try_pomodora_study_technique">Try pomodora study technique</string>
    <string name="meditate_for_30_minutes">Meditate for 30 minutes</string>
    <string name="play_with_pet_dog">Play with pet dog</string>
    <string name="home">Home</string>
    <string name="progress">Progress</string>
    <string name="add_goal">Add Goal</string>
    <string name="wellness">Wellness</string>
    <string name="profile">Profile</string>
    <string name="wellness_resources">Wellness Resources</string>
    <string name="read_chapter_5_of_textbook">Read chapter 5 of textbook</string>
    <string name="home_wellness_resources">Home / Wellness Resources</string>
    <string name="guided_meditation">Guided Meditation</string>
    <string name="_3_5_minutes_of_a_guided_meditation_to_help_clear_your_mind">3-5 minutes of a guided meditation to help clear your mind</string>
    <string name="ventpad">VentPad</string>
    <string name="organize_your_thoughts_and_understand_your_mind_better_by_physically_typing_them_out">Organize your thoughts and understand your mind better by physically typing them out</string>
</resources>