<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WellnessResources">

    <TextView
        android:id="@+id/textViewWellnessHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/libre_baskerville"
        android:text="@string/wellness_resources"
        android:textColor="@color/azure"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/home_wellness_resources"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.158"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="349dp"
        android:layout_height="51dp"
        android:background="#CAC5C5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.161" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="409dp"
        android:layout_height="50dp"
        android:backgroundTint="#F4F0EC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/imageViewHome"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:contentDescription="@string/home"
            app:srcCompat="@drawable/wellness_home" />

        <TextView
            android:id="@+id/textViewHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="30dp"
            android:text="@string/home"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/imageViewChart"
            android:layout_width="52dp"
            android:layout_height="35dp"
            android:layout_marginStart="95dp"
            android:contentDescription="@string/progress"
            app:srcCompat="@drawable/chart" />

        <TextView
            android:id="@+id/textViewChart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="95dp"
            android:layout_marginTop="30dp"
            android:text="@string/progress"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/imageViewAdd"
            android:layout_width="52dp"
            android:layout_height="35dp"
            android:layout_marginStart="180dp"
            android:contentDescription="@string/add_goal"
            app:srcCompat="@drawable/circle_add" />

        <TextView
            android:id="@+id/textViewAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="180dp"
            android:layout_marginTop="30dp"
            android:text="@string/add_goal"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/imageViewWellness"
            android:layout_width="52dp"
            android:layout_height="35dp"
            android:layout_marginStart="259dp"
            android:contentDescription="@string/wellness"
            app:srcCompat="@drawable/wellness_page_wellnessicon" />

        <TextView
            android:id="@+id/textViewWellness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="259dp"
            android:layout_marginTop="30dp"
            android:text="@string/wellness"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/imageViewProfile"
            android:layout_width="52dp"
            android:layout_height="35dp"
            android:layout_marginStart="338dp"
            android:contentDescription="@string/profile"
            app:srcCompat="@drawable/person" />

        <TextView
            android:id="@+id/textViewProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="346dp"
            android:layout_marginTop="30dp"
            android:text="@string/profile"
            android:textColor="@color/black"
            android:textSize="12sp" />


    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="246dp"
        android:layout_height="135dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.312"
        app:srcCompat="@drawable/calmperson" />

    <androidx.cardview.widget.CardView
        android:layout_width="245dp"
        android:layout_height="51dp"
        app:cardBackgroundColor="@color/lightBlue"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.515" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guided_meditation"
                android:gravity="center_horizontal"
                android:textSize="13sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/textViewDesc2"
                android:layout_width="251dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/_3_5_minutes_of_a_guided_meditation_to_help_clear_your_mind"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="italic" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="360dp"
        android:layout_height="146dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.736"
        app:srcCompat="@drawable/sadwrite" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="250dp"
        android:layout_height="51dp"
        app:cardBackgroundColor="@color/lightBlue"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.928">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/ventpad"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewDesc1"
                android:layout_width="251dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/organize_your_thoughts_and_understand_your_mind_better_by_physically_typing_them_out"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="italic" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>